# Hermes

./: .gitignore  CHANGELOG.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  TUTORIAL.md  VISUAL_COMPARISON.md  app.py  dev.py  pyproject.toml  test.ipynb  test_integration.py
.github/: copilot-instructions.md
data/: questions.csv  shipment_questions_500.csv  shipments.csv  shipments_1000.csv
data/processed/: predicts.csv
evaluation/: README.md  run_all_evaluations.py  test_accuracy.py  test_explainability.py  test_performance.py
notebooks/: baseline.ipynb
src/hermes/: ___init___.py  analytics.py  app.py  autoviz.py  config.py  llm.py  models.py  prompts.py  router.py  semantic.py  ui.py  ui_agent.py  utils.py  visualizer.py
src/hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
