[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.0.1"
description = "Hermes AI Logistics Assistant — natural language analytics for shipments (PandasAI powered)"
readme = "README.md"
authors = [
  { name = "Hermes AI", email = "dev@hermes.ai" }
]
requires-python = ">=3.8,<3.12"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandasai>=3.0.0b19",
  "pandasai-litellm>=0.0.1",
  "gradio>=5.48.0",
  "pillow>=9.0.0",
  "watchgod"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "flake8",
  "pre-commit"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# console script entrypoint - expects a callable main() in src/hermes/app.py
hermes = "hermes.app:main"